General Front-End Changes DONE * Added navbar links to all user related situations * Cleaned view from useless information like recents. * Fixed standard users being described as Authors * Added Z-index and link functionality to Login-status button.

--- a/src/main/resources/public/css/custom.css
+++ b/src/main/resources/public/css/custom.css
@@ -39,11 +39,24 @@ html,body{
     right: 0%;
 }
 
+
 #login_status{
     padding: 10px;
     color: white;
     background: rgba(0,0,0,0.4);
     text-align: center;
+    z-index: 20;
+}
+
+#login_status a{
+    color: white;
+}
+
+#login_status a:hover{
+    text-decoration: none;
+    cursor: pointer;
+    color: #ecf0f1;
+
 }
 
 .title{
